feat(streams): stage 4 — hard-replace cluster-event log/sweeper with sealed ClusterEvent over system:cluster-events stream